--- a/docker_fs/.env.dev
+++ b/docker_fs/.env.dev
@@ -1,9 +1,9 @@
 DB_HOST=db      
 DB_PORT=5432
-DB_NAME=project_backend_dev
-DB_USER=dev_user
-DB_PASSWORD=dev_pass
-DB_URL=postgresql+asyncpg://dev_user:dev_pass@db:5432/project_backend_dev
+DB_NAME=FastSim_dev
+DB_USER=FastSim_dev_user
+DB_PASSWORD=FastSim_dev_pass
+DB_URL=postgresql+asyncpg://FastSim_dev_user:dev_pass@db:5432/FastSim_dev
 
 PGADMIN_DEFAULT_EMAIL=admin@example.com
 PGADMIN_DEFAULT_PASSWORD=secret
