--- a/.github/workflows/ci-develop.yml
+++ b/.github/workflows/ci-develop.yml
@@ -45,6 +45,9 @@ jobs:
           curl -sSL https://install.python-poetry.org | python3 -
           poetry config virtualenvs.create false
           poetry install --with dev --no-interaction
+      
+      - name: Verify lock file is up to date
+        run: poetry lock --check
 
       # Code quality gates
       - name: Run Ruff (lint & formatting check)
@@ -82,6 +85,9 @@ jobs:
           curl -sSL https://install.python-poetry.org | python3 -
           poetry config virtualenvs.create false
           poetry install --with dev --no-interaction
+      
+      - name: Verify lock file is up to date
+        run: poetry lock --check
 
       - name: Run Ruff
         run: poetry run ruff check src tests
