Changed name from fastsim to asyncflow app folder renamed in asyncflow

--- a/examples/data/single_server.yml
+++ b/examples/data/single_server.yml
@@ -1,5 +1,5 @@
 # ───────────────────────────────────────────────────────────────
-# FastSim scenario: generator ➜ client ➜ server ➜ client
+# AsyncFlow scenario: generator ➜ client ➜ server ➜ client
 # ───────────────────────────────────────────────────────────────
 
 # 1. Traffic generator (light load)
