--- a/pytest.ini
+++ b/pytest.ini
@@ -2,5 +2,6 @@
 addopts = -ra -q
 testpaths = tests
 markers =
-    integration: tests that require external services (database, HTTP calls, etc.)
+    integration: tests that require components interactions
+    system: end-to-end/system scenarios
 asyncio_mode = auto
