--- a/.github/workflows/ci-main.yml
+++ b/.github/workflows/ci-main.yml
@@ -57,4 +57,4 @@ jobs:
           files: coverage.xml
           flags: tests
           fail_ci_if_error: true
-        
+          token: ${{ secrets.CODECOV_TOKEN }}
